new site wooooo

--- a/web/writing.html
+++ b/web/writing.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Murray</title>
+  <title>Murray ~ Games</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -47,15 +47,14 @@
       <p class="intro twelve columns">
         <a href="https://twitter.com/murrayirc/" target="_blank">@murrayirc</a>
       </p>
+
+      <p class="pagetitle twelve columns">writing</p>
     </div>
 
 
 
-    <a class="offset-by-two contentarea eight columns" href="games.html" style="background-image: url('images/controller-icon.svg');">games</a>
+    <p class="intro twelve columns">nothing here yet!</p>
 
-    <a class="offset-by-two contentarea eight columns" href="music.html" style="background-image: url('images/controller-icon.svg');">music</a>
-
-    <a class="offset-by-two contentarea eight columns" href="writing.html" style="background-image: url('images/controller-icon.svg');">writing</a>
 
 
   </div>
