--- a/web/games.html
+++ b/web/games.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Murray</title>
+  <title>Murray ~ Games</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -47,15 +47,18 @@
       <p class="intro twelve columns">
         <a href="https://twitter.com/murrayirc/" target="_blank">@murrayirc</a>
       </p>
+
+      <p class="pagetitle twelve columns">games</p>
     </div>
 
 
 
-    <a class="offset-by-two contentarea eight columns" href="games.html" style="background-image: url('images/controller-icon.svg');">games</a>
+    <a class="offset-by-two contentarea eight columns" href="http://murrayirc.itch.io/gallery" target="_blank" style="background-image: url('images/gallery.png');">gallery</a>
 
-    <a class="offset-by-two contentarea eight columns" href="music.html" style="background-image: url('images/controller-icon.svg');">music</a>
+    <a class="offset-by-two gameimage eight columns" href="http://murrayirc.itch.io/garden" target="_blank" style="background-image: url('images/garden.png');">garden</a>
 
-    <a class="offset-by-two contentarea eight columns" href="writing.html" style="background-image: url('images/controller-icon.svg');">writing</a>
+    <a class="offset-by-two gameimage eight columns" href="http://murrayirc.itch.io/mama" target="_blank" style="background-image: url('images/mama.png');">mama</a>
+
 
 
   </div>
