--- a/web/games.html
+++ b/web/games.html
@@ -41,7 +41,7 @@
       </a>-->
 
       <p class="textlogo twelve columns">
-        <a href="http://murrayirc.com">murray campbell</a>
+        <a href="index.html">murray campbell</a>
       </p>
 
       <p class="intro twelve columns">
