--- a/web/index.html
+++ b/web/index.html
@@ -41,7 +41,7 @@
       </a>-->
 
       <p class="textlogo twelve columns">
-        <a href="http://murrayirc.com">murray campbell</a>
+        <a href="index.html">murray campbell</a>
       </p>
 
       <p class="intro twelve columns">
@@ -51,11 +51,11 @@
 
 
 
-    <a class="offset-by-two contentarea eight columns" href="http://murrayirc.com/games" style="background-image: url('images/controller-icon.svg');">games</a>
+    <a class="offset-by-two contentarea eight columns" href="games.html" style="background-image: url('images/controller-icon.svg');">games</a>
 
-    <a class="offset-by-two contentarea eight columns" href="http://murrayirc.com/music" style="background-image: url('images/controller-icon.svg');">music</a>
+    <a class="offset-by-two contentarea eight columns" href="music.html" style="background-image: url('images/controller-icon.svg');">music</a>
 
-    <a class="offset-by-two contentarea eight columns" href="http://murrayirc.com/writing" style="background-image: url('images/controller-icon.svg');">writing</a>
+    <a class="offset-by-two contentarea eight columns" href="writing.html" style="background-image: url('images/controller-icon.svg');">writing</a>
 
 
   </div>
