--- a/web/games.html
+++ b/web/games.html
@@ -53,7 +53,7 @@
 
 
 
-    <a class="offset-by-two contentarea eight columns" href="http://murrayirc.itch.io/gallery" target="_blank" style="background-image: url('images/gallery.png');">gallery</a>
+    <a class="offset-by-two gameimage eight columns" href="http://murrayirc.itch.io/gallery" target="_blank" style="background-image: url('images/gallery.png');">gallery</a>
 
     <a class="offset-by-two gameimage eight columns" href="http://murrayirc.itch.io/garden" target="_blank" style="background-image: url('images/garden.png');">garden</a>
 
