--- a/web/music.html
+++ b/web/music.html
@@ -52,10 +52,29 @@
     </div>
 
 
+    <div class="songblock offset-by-two eight columns ">
+    	<p>for r</p>
+    	<audio controls>
+  			<source src="music/for_r.mp3" type="audio/mpeg">
+			Your browser does not support the audio element.
+		</audio>
+	</div>
 
-    <p class="intro twelve columns">nothing here yet!</p>
+	<div class="songblock offset-by-two eight columns ">
+    	<p>elegia</p>
+    	<audio controls>
+  			<source src="music/elegia.mp3" type="audio/mpeg">
+			Your browser does not support the audio element.
+		</audio>
+	</div>
 
-
+	<div class="songblock offset-by-two eight columns ">
+    	<p>jp</p>
+    	<audio controls>
+  			<source src="music/jp.mp3" type="audio/mpeg">
+			Your browser does not support the audio element.
+		</audio>
+	</div>
 
   </div>
 
