--- a/web/music.html
+++ b/web/music.html
@@ -52,26 +52,26 @@
     </div>
 
 
-    <div class="songblock offset-by-two eight columns ">
+    <div class="songblock offset-by-two eight columns">
     	<p>for r</p>
-    	<audio controls>
-  			<source src="music/for_r.mp3" type="audio/mpeg">
+    	<audio controls preload="auto">
+  			<source src="https://dl.dropboxusercontent.com/content_link/ceaOlFOnRKktzCvCPWbooBZY7lAmNoaYZFsg6Xch7wo3UpP6P4icJzVxidQ2jJmr/file" type="audio/mpeg">
 			Your browser does not support the audio element.
 		</audio>
 	</div>
 
-	<div class="songblock offset-by-two eight columns ">
+	<div class="songblock offset-by-two eight columns">
     	<p>elegia</p>
-    	<audio controls>
-  			<source src="music/elegia.mp3" type="audio/mpeg">
+    	<audio controls preload="auto">
+  			<source src="https://dl.dropboxusercontent.com/content_link/xDSrYJ6sbqO8Ae4Un7O7E2reovcBhOu0NX2hzH57UQ1eOvgFUEsHtzcsYbADSqef/file" type="audio/mpeg">
 			Your browser does not support the audio element.
 		</audio>
 	</div>
 
-	<div class="songblock offset-by-two eight columns ">
+	<div class="songblock offset-by-two eight columns">
     	<p>jp</p>
-    	<audio controls>
-  			<source src="music/jp.mp3" type="audio/mpeg">
+    	<audio controls preload="auto">
+  			<source src="https://dl.dropboxusercontent.com/content_link/wTf6rCkUVBXGyNxBt6flgH24ZAYTm3xHzo2jNwynvlKmNbHW3fj681JmAuaV1I7x/file" type="audio/mpeg">
 			Your browser does not support the audio element.
 		</audio>
 	</div>
