--- a/web/music.html
+++ b/web/music.html
@@ -55,7 +55,7 @@
     <div class="songblock offset-by-two eight columns">
     	<p>for r</p>
     	<audio controls preload="auto">
-  			<source src="https://dl.dropboxusercontent.com/content_link/ceaOlFOnRKktzCvCPWbooBZY7lAmNoaYZFsg6Xch7wo3UpP6P4icJzVxidQ2jJmr/file" type="audio/mpeg">
+  			<source src="https://www.dropbox.com/s/he75flj03ggiuef/for_r.mp3?raw=1" type="audio/mpeg">
 			Your browser does not support the audio element.
 		</audio>
 	</div>
@@ -63,7 +63,7 @@
 	<div class="songblock offset-by-two eight columns">
     	<p>elegia</p>
     	<audio controls preload="auto">
-  			<source src="https://dl.dropboxusercontent.com/content_link/xDSrYJ6sbqO8Ae4Un7O7E2reovcBhOu0NX2hzH57UQ1eOvgFUEsHtzcsYbADSqef/file" type="audio/mpeg">
+  			<source src="https://www.dropbox.com/s/z6rlmvbs3qwx0jc/elegia.mp3?raw=1" type="audio/mpeg">
 			Your browser does not support the audio element.
 		</audio>
 	</div>
@@ -71,7 +71,7 @@
 	<div class="songblock offset-by-two eight columns">
     	<p>jp</p>
     	<audio controls preload="auto">
-  			<source src="https://dl.dropboxusercontent.com/content_link/wTf6rCkUVBXGyNxBt6flgH24ZAYTm3xHzo2jNwynvlKmNbHW3fj681JmAuaV1I7x/file" type="audio/mpeg">
+  			<source src="https://www.dropbox.com/s/mjyiyfw319boobg/jp.mp3?raw=1" type="audio/mpeg">
 			Your browser does not support the audio element.
 		</audio>
 	</div>
