--- a/web/writing.html
+++ b/web/writing.html
@@ -40,7 +40,7 @@
         <h1>murray campbell</h1>
       </a>-->
 
-      <p class="textlogo u-max-full-width twelve columns">
+      <p class="textlogo twelve columns">
         <a href="http://murrayirc.com">murray campbell</a>
       </p>
 
