--- a/web/index.html
+++ b/web/index.html
@@ -57,6 +57,10 @@
 
     <a class="offset-by-two contentarea eight columns" href="http://murrayirc.com/writing" style="background-image: url('images/writing-icon.svg');">writing</a>
 
+    <p class="textlogo twelve columns">
+        <a href="http://murrayirc.com">POOOOOOOOOOOOOOOOOOOP</a>
+    </p>
+
 
   </div>
 
