--- a/web/games.html
+++ b/web/games.html
@@ -53,11 +53,12 @@
 
 
 
+
+    <a class="offset-by-two gameimage eight columns" href="http://johngroot.itch.io/tots-life" target="_blank" style="background-image: url('images/totslife.png');">mama</a>
+
     <a class="offset-by-two gameimage eight columns" href="http://murrayirc.itch.io/gallery" target="_blank" style="background-image: url('images/gallery.png');">gallery</a>
 
     <a class="offset-by-two gameimage eight columns" href="http://murrayirc.itch.io/garden" target="_blank" style="background-image: url('images/garden.png');">garden</a>
-
-    <a class="offset-by-two gameimage eight columns" href="http://murrayirc.itch.io/mama" target="_blank" style="background-image: url('images/mama.png');">mama</a>
 
 
 
