--- a/web/games.html
+++ b/web/games.html
@@ -54,7 +54,7 @@
 
 
 
-    <a class="offset-by-two gameimage eight columns" href="http://johngroot.itch.io/tots-life" target="_blank" style="background-image: url('images/totslife.png');">mama</a>
+    <a class="offset-by-two gameimage eight columns" href="http://johngroot.itch.io/tots-life" target="_blank" style="background-image: url('images/totslife.png');">tot's life</a>
 
     <a class="offset-by-two gameimage eight columns" href="http://murrayirc.itch.io/gallery" target="_blank" style="background-image: url('images/gallery.png');">gallery</a>
 
