--- a/web/index.html
+++ b/web/index.html
@@ -51,11 +51,11 @@
 
 
 
-    <a class="offset-by-two contentarea eight columns" href="http://murrayirc.com/games" style="background-image: url('images/controller-icon-blue.svg');">games</a>
+    <a class="offset-by-two contentarea eight columns" href="http://murrayirc.com/games" style="background-image: url('images/controller-icon.svg');">games</a>
 
-    <a class="offset-by-two contentarea eight columns" href="http://murrayirc.com/music" style="background-image: url('images/music-icon-blue.svg');">music</a>
+    <a class="offset-by-two contentarea eight columns" href="http://murrayirc.com/music" style="background-image: url('images/music-icon.svg');">music</a>
 
-    <a class="offset-by-two contentarea eight columns" href="http://murrayirc.com/writing" style="background-image: url('images/writing-icon-blue.svg');">writing</a>
+    <a class="offset-by-two contentarea eight columns" href="http://murrayirc.com/writing" style="background-image: url('images/writing-icon.svg');">writing</a>
 
 
   </div>
