fixed writing link.

--- a/web/index.html
+++ b/web/index.html
@@ -55,7 +55,7 @@
 
     <a class="offset-by-two contentarea eight columns" href="http://murrayirc.com/music" style="background-image: url('images/music-icon.svg');">music</a>
 
-    <a class="offset-by-two contentarea eight columns" href="http://murrayirc.com/writing" style="background-image: url('images/writing-icon.svg');">writing</a>
+    <a class="offset-by-two contentarea eight columns" href="http://murrayirc.tumblr.com/" style="background-image: url('images/writing-icon.svg');">writing</a>
 
 
   </div>
