--- a/web/index.html
+++ b/web/index.html
@@ -51,9 +51,9 @@
 
 
 
-    <a class="offset-by-two contentarea eight columns" href="http://murrayirc.com/games" style="background-image: url('images/controller-icon.svg');">games</a>
+    <a class="offset-by-two contentarea eight columns" href="https://murrayirc.itch.io/" style="background-image: url('images/controller-icon.svg');">games</a>
 
-    <a class="offset-by-two contentarea eight columns" href="http://murrayirc.com/music" style="background-image: url('images/music-icon.svg');">music</a>
+    <a class="offset-by-two contentarea eight columns" href="https://soundcloud.com/pastajones" style="background-image: url('images/music-icon.svg');">music</a>
 
     <a class="offset-by-two contentarea eight columns" href="http://murrayirc.tumblr.com/" style="background-image: url('images/writing-icon.svg');">writing</a>
 
