--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Murray</title>
+  <title>murr's web place</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
