removing music and writing links, they don't need to be here.

--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>murr's web place</title>
+  <title>murray campbell</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -55,9 +55,9 @@
 
     <a class="offset-by-two contentarea eight columns" href="https://murrayirc.itch.io/" style="background-image: url('images/games.png');">games</a>
 
-    <a class="offset-by-two contentarea eight columns" href="https://soundcloud.com/pastajones" style="background-image: url('images/music.png');">music</a>
+    <!--<a class="offset-by-two contentarea eight columns" href="https://soundcloud.com/pastajones" style="background-image: url('images/music.png');">music</a>
 
-    <a class="offset-by-two contentarea eight columns" href="http://murrayirc.tumblr.com/" style="background-image: url('images/writing.png');">writing</a>
+    <a class="offset-by-two contentarea eight columns" href="http://murrayirc.tumblr.com/" style="background-image: url('images/writing.png');">writing</a>-->
 
 
   </div>
