hi. added resume section.

--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <title>murray campbell</title>
   <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="author" content="murray campbell">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -54,6 +54,8 @@
 
 
     <a class="offset-by-two contentarea eight columns" href="https://murrayirc.itch.io/" style="background-image: url('images/games.png');">games</a>
+
+    <a class="offset-by-two smallcontentarea eight columns" href="https://drive.google.com/file/d/0BzeV5laU3Lr9bVljNFQ0bW9mYUk/view?usp=sharing" style=");">resume</a>
 
     <!--<a class="offset-by-two contentarea eight columns" href="https://soundcloud.com/pastajones" style="background-image: url('images/music.png');">music</a>
 
