--- a/web/index.html
+++ b/web/index.html
@@ -5,9 +5,9 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>murray campbell</title>
+  <title>Murray Campbell</title>
   <meta name="description" content="">
-  <meta name="author" content="murray campbell">
+  <meta name="author" content="Murray Campbell">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -18,7 +18,8 @@
   <!--<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300' rel='stylesheet' type='text/css'>-->
   <!--<link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">-->
   <!--<link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>-->
-  <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans' rel='stylesheet' type='text/css'>
+  <!--<link href='https://fonts.googleapis.com/css?family=Alegreya+Sans' rel='stylesheet' type='text/css'>-->
+  <link href="https://fonts.googleapis.com/css?family=Cutive+Mono" rel="stylesheet">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -43,7 +44,7 @@
       </a>-->
 
       <p class="textlogo twelve columns">
-        <a href="http://murrayirc.com">murray campbell</a>
+        <a href="http://murrayirc.com">Murray Campbell</a>
       </p>
 
       <p class="intro twelve columns">
@@ -53,9 +54,11 @@
 
 
 
-    <a class="offset-by-two contentarea eight columns" href="https://murrayirc.itch.io/" style="background-image: url('images/games.png');">games</a>
+    <a class="offset-by-two contentarea eight columns" href="https://murrayirc.itch.io/" target="_blank" style="background-image: url('images/games.png');">games</a>
 
-    <a class="offset-by-two smallcontentarea eight columns" href="https://drive.google.com/file/d/0BzeV5laU3Lr9bVljNFQ0bW9mYUk/view?usp=sharing" style=");">resume</a>
+    <a class="offset-by-two smallcontentarea eight columns" href="https://drive.google.com/open?id=1nneWsA0SmlPBgv6WMJRmAAgrI_f-YMdrIwzmuttsOTw" target="_blank" style="">resume</a>
+
+    <a class="offset-by-two smallcontentarea eight columns" href="https://github.com/MurrayIRC" target="_blank" style="">github</a>
 
     <!--<a class="offset-by-two contentarea eight columns" href="https://soundcloud.com/pastajones" style="background-image: url('images/music.png');">music</a>
 
