--- a/web/index.html
+++ b/web/index.html
@@ -60,6 +60,8 @@
 
     <a class="offset-by-two smallcontentarea eight columns" href="https://github.com/MurrayIRC" target="_blank" style="">github</a>
 
+    <a class="offset-by-two smallcontentarea eight columns" href="https://recountingplay.tumblr.com/" target="_blank" style="">personal games writing</a>
+
     <!--<a class="offset-by-two contentarea eight columns" href="https://soundcloud.com/pastajones" style="background-image: url('images/music.png');">music</a>
 
     <a class="offset-by-two contentarea eight columns" href="http://murrayirc.tumblr.com/" style="background-image: url('images/writing.png');">writing</a>-->
