--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,8 @@
   <!--<link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>-->
   <!--<link href='https://fonts.googleapis.com/css?family=Alegreya+Sans' rel='stylesheet' type='text/css'>-->
   <link href="https://fonts.googleapis.com/css?family=Cutive+Mono" rel="stylesheet">
+  <!--<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">-->
+  <!--<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">-->
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -46,26 +48,33 @@
       <p class="textlogo twelve columns">
         <a href="http://murrayirc.com">Murray Campbell</a>
       </p>
-
-      <p class="intro twelve columns">
-        <a href="https://twitter.com/murrayirc/" target="_blank">@murrayirc</a>
-      </p>
     </div>
 
+    <p class="intro twelve columns">
+      <a href="https://twitter.com/murrayirc/" target="_blank">twitter</a>
+      _[o_o]_
+      <a href="https://github.com/MurrayIRC" target="_blank">github</a>
+      _[o_o]_
+      <a href="https://recountingplay.tumblr.com/" target="_blank">writing</a>
+      _[o_o]_
+      <a href="https://drive.google.com/open?id=1Ns0-eGtJoqDmDWYbG56abFUI1J3F8k6G35SBJaYUd_I" target="_blank">resume</a>
+    </p>
 
 
-    <a class="offset-by-two contentarea eight columns" href="https://murrayirc.itch.io/" target="_blank" style="background-image: url('images/games.png');">games</a>
+<!-- PROJECTS
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-    <a class="offset-by-two smallcontentarea eight columns" href="https://drive.google.com/open?id=1Ns0-eGtJoqDmDWYbG56abFUI1J3F8k6G35SBJaYUd_I" target="_blank" style="">resume</a>
+    <div id="header" class="row">
 
-    <a class="offset-by-two smallcontentarea eight columns" href="https://github.com/MurrayIRC" target="_blank" style="">github</a>
+      <a class="contentarea four columns" href="https://murrayirc.itch.io/flock" target="_blank" style="background-image: url('images/flock.png');">flock</a>
 
-    <a class="offset-by-two smallcontentarea eight columns" href="https://recountingplay.tumblr.com/" target="_blank" style="">personal games writing</a>
+      <a class="contentarea four columns" href="https://johngroot.itch.io/tots-life-0" target="_blank" style="background-image: url('images/totslife.png');">tots' life</a>
 
-    <!--<a class="offset-by-two contentarea eight columns" href="https://soundcloud.com/pastajones" style="background-image: url('images/music.png');">music</a>
+      <a class="contentarea four columns" href="https://murrayirc.itch.io/gallery" target="_blank" style="background-image: url('images/gallery.png');">gallery</a>
 
-    <a class="offset-by-two contentarea eight columns" href="http://murrayirc.tumblr.com/" style="background-image: url('images/writing.png');">writing</a>-->
+    </div>
 
+    <a class="smallcontentarea twelve columns" href="https://murrayirc.itch.io/" target="_blank">more games on itch.io</a>
 
   </div>
 
