--- a/web/index.html
+++ b/web/index.html
@@ -15,13 +15,7 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <!--<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300' rel='stylesheet' type='text/css'>-->
-  <!--<link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">-->
-  <!--<link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>-->
-  <!--<link href='https://fonts.googleapis.com/css?family=Alegreya+Sans' rel='stylesheet' type='text/css'>-->
-  <link href="https://fonts.googleapis.com/css?family=Cutive+Mono" rel="stylesheet">
-  <!--<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">-->
-  <!--<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">-->
+  <link href="https://fonts.googleapis.com/css?family=Concert+One|Rubik:300" rel="stylesheet">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -52,11 +46,11 @@
 
     <p class="intro twelve columns">
       <a href="https://twitter.com/murrayirc/" target="_blank">twitter</a>
-      _[o_o]_
+      |
       <a href="https://github.com/MurrayIRC" target="_blank">github</a>
-      _[o_o]_
+      |
       <a href="https://recountingplay.tumblr.com/" target="_blank">writing</a>
-      _[o_o]_
+      |
       <a href="https://drive.google.com/open?id=1Ns0-eGtJoqDmDWYbG56abFUI1J3F8k6G35SBJaYUd_I" target="_blank">resume</a>
     </p>
 
