--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,7 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
+  <div class="container u-max-full-width">
 
     <div id="header" class="row">
 
