added laby to projects

--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,7 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container u-max-full-width">
+  <div class="container">
 
     <div id="header" class="row">
 
@@ -63,6 +63,12 @@
       <a class="contentarea four columns" href="https://murrayirc.itch.io/flock" target="_blank" style="background-image: url('images/flock.png');">flock</a>
 
       <a class="contentarea four columns" href="https://johngroot.itch.io/tots-life-0" target="_blank" style="background-image: url('images/totslife.png');">tots' life</a>
+
+      <a class="contentarea four columns" href="http://labyrinthiumgame.com/" target="_blank" style="background-image: url('images/labyrinthium.png');">labyrinthium</a>
+
+    </div>
+
+    <div id="header" class="row">
 
       <a class="contentarea four columns" href="https://murrayirc.itch.io/gallery" target="_blank" style="background-image: url('images/gallery.png');">gallery</a>
 
