--- a/web/index.html
+++ b/web/index.html
@@ -49,7 +49,7 @@
       |
       <a href="https://github.com/MurrayIRC" target="_blank">github</a>
       |
-      <a href="https://recountingplay.tumblr.com/" target="_blank">writing</a>
+      <a href="https://murraycampbell.tumblr.com/" target="_blank">writing</a>
       |
       <a href="https://drive.google.com/open?id=1Ns0-eGtJoqDmDWYbG56abFUI1J3F8k6G35SBJaYUd_I" target="_blank">resume</a>
     </p>
@@ -60,17 +60,19 @@
 
     <div id="header" class="row">
 
-      <a class="contentarea four columns" href="https://murrayirc.itch.io/flock" target="_blank" style="background-image: url('images/flock.png');">flock</a>
+      <a class="contentarea four columns" href="https://totsteam.itch.io/thatbloomingfeeling" target="_blank" style="background-image: url('images/tbf.png');">That Blooming Feeling</a>
 
-      <a class="contentarea four columns" href="https://johngroot.itch.io/tots-life-0" target="_blank" style="background-image: url('images/totslife.png');">tots' life</a>
+      <a class="contentarea four columns" href="https://murrayirc.itch.io/flock" target="_blank" style="background-image: url('images/flock.png');">FLOCK</a>
 
-      <a class="contentarea four columns" href="http://labyrinthiumgame.com/" target="_blank" style="background-image: url('images/labyrinthium.png');">labyrinthium</a>
+      <a class="contentarea four columns" href="https://johngroot.itch.io/tots-life-0" target="_blank" style="background-image: url('images/totslife.png');">Tots' Life</a>
 
     </div>
 
     <div id="header" class="row">
 
-      <a class="contentarea four columns" href="https://murrayirc.itch.io/gallery" target="_blank" style="background-image: url('images/gallery.png');">gallery</a>
+      <a class="contentarea four columns" href="http://labyrinthiumgame.com/" target="_blank" style="background-image: url('images/labyrinthium.png');">Labyrinthium</a>
+
+      <a class="contentarea four columns" href="https://murrayirc.itch.io/gallery" target="_blank" style="background-image: url('images/gallery.png');">Gallery</a>
 
     </div>
 
