--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,7 @@
   <title>Murray Campbell</title>
   <meta name="description" content="">
   <meta name="author" content="Murray Campbell">
+  <meta name="google-site-verification" content="LSlbIXthQF2sT-XH_cSvKZnQOTerVmwDc3pr0HX3HuM" />
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
