--- a/web/index.html
+++ b/web/index.html
@@ -49,7 +49,9 @@
       |
       <a href="https://github.com/MurrayIRC" target="_blank">github</a>
       |
-      <a href="https://drive.google.com/open?id=1Ns0-eGtJoqDmDWYbG56abFUI1J3F8k6G35SBJaYUd_I" target="_blank">resume</a>
+      <a href="https://docs.google.com/document/d/1HdR_eulg6KaJyS9L2UdK2dUS48k05s9ROXXFFxM3m38/edit?usp=sharing" target="_blank">resume</a>
+      |
+      <a href="https://recountingplay.tumblr.com/" target="_blank">writing</a>
     </p>
 
 
