--- a/web/index.html
+++ b/web/index.html
@@ -51,7 +51,7 @@
       |
       <a href="https://docs.google.com/document/d/1HdR_eulg6KaJyS9L2UdK2dUS48k05s9ROXXFFxM3m38/edit?usp=sharing" target="_blank">resume</a>
       |
-      <a href="https://recountingplay.tumblr.com/" target="_blank">writing</a>
+      <a href="https://onthezero.tumblr.com/" target="_blank">writing</a>
     </p>
 
 
