--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 
     <div id="header" class="row">
 
+      <a class="contentarea four columns" href="http://chessumo.com/" target="_blank" style="background-image: url('images/chessumo.png');">Chessumo</a>
+
       <a class="contentarea four columns" href="https://totsteam.itch.io/thatbloomingfeeling" target="_blank" style="background-image: url('images/tbf.png');">That Blooming Feeling</a>
 
       <a class="contentarea four columns" href="https://murrayirc.itch.io/flock" target="_blank" style="background-image: url('images/flock.png');">FLOCK</a>
