--- a/games.html
+++ b/games.html
@@ -41,7 +41,7 @@
       </a>-->
 
       <p class="textlogo twelve columns">
-        <a href="http://murrayirc.com">murray campbell</a>
+        <a href="https://murrayirc.com">murray campbell</a>
       </p>
 
       <p class="intro twelve columns">
@@ -54,11 +54,11 @@
 
 
 
-    <a class="offset-by-two gameimage eight columns" href="http://johngroot.itch.io/tots-life" target="_blank" style="background-image: url('images/totslife.png');">tot's life</a>
+    <a class="offset-by-two gameimage eight columns" href="https://johngroot.itch.io/tots-life" target="_blank" style="background-image: url('images/totslife.png');">tot's life</a>
 
-    <a class="offset-by-two gameimage eight columns" href="http://murrayirc.itch.io/gallery" target="_blank" style="background-image: url('images/gallery.png');">gallery</a>
+    <a class="offset-by-two gameimage eight columns" href="https://murrayirc.itch.io/gallery" target="_blank" style="background-image: url('images/gallery.png');">gallery</a>
 
-    <a class="offset-by-two gameimage eight columns" href="http://murrayirc.itch.io/garden" target="_blank" style="background-image: url('images/garden.png');">garden</a>
+    <a class="offset-by-two gameimage eight columns" href="https://murrayirc.itch.io/garden" target="_blank" style="background-image: url('images/garden.png');">garden</a>
 
 
 
