--- a/index.html
+++ b/index.html
@@ -40,18 +40,14 @@
       </a>-->
 
       <p class="textlogo twelve columns">
-        <a href="http://murrayirc.com">Murray Campbell</a>
+        <a href="https://murrayirc.com">Murray Campbell</a>
       </p>
     </div>
 
     <p class="intro twelve columns">
-      <a href="https://twitter.com/murrayirc/" target="_blank">twitter</a>
-      |
       <a href="https://github.com/MurrayIRC" target="_blank">github</a>
       |
       <a href="https://docs.google.com/document/d/1HdR_eulg6KaJyS9L2UdK2dUS48k05s9ROXXFFxM3m38/edit?usp=sharing" target="_blank">resume</a>
-      |
-      <a href="https://onthezero.tumblr.com/" target="_blank">writing</a>
     </p>
 
 
@@ -71,8 +67,6 @@
     <div id="header" class="row">
 
       <a class="contentarea four columns" href="https://johngroot.itch.io/tots-life-0" target="_blank" style="background-image: url('images/totslife.png');">Tots' Life</a>
-
-      <a class="contentarea four columns" href="http://labyrinthiumgame.com/" target="_blank" style="background-image: url('images/labyrinthium.png');">Labyrinthium</a>
 
       <a class="contentarea four columns" href="https://murrayirc.itch.io/gallery" target="_blank" style="background-image: url('images/gallery.png');">Gallery</a>
 
