--- a/music.html
+++ b/music.html
@@ -16,7 +16,7 @@
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <!--<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300' rel='stylesheet' type='text/css'>-->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -41,7 +41,7 @@
       </a>-->
 
       <p class="textlogo twelve columns">
-        <a href="http://murrayirc.com">murray campbell</a>
+        <a href="https://murrayirc.com">murray campbell</a>
       </p>
 
       <p class="intro twelve columns">
