updated site to be a bit less reliant on skeleton.
hopefully this is much more straightforward

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
   <!-- Basic Page Needs
@@ -20,63 +21,49 @@
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
-<body class="home">
 
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
+<body>
+  <h1><a href="https://murray.media">Murray Campbell</a></h1>
+  <p><a href="https://github.com/MurrayIRC" target="_blank">github</a> ***
+    <a href="https://docs.google.com/document/d/1HdR_eulg6KaJyS9L2UdK2dUS48k05s9ROXXFFxM3m38/edit?usp=sharing"
+      target="_blank">resume</a>
+  </p>
 
-    <div id="header" class="row">
+  <h2>projects</h2>
+  <hr>
+  <p><a href="http://chessumo.com/" target="_blank">chessumo</a> - a chess game</p>
 
-      <!--<a class="logo twelve columns" href="http://murrayirc.com">
-        <h1>murray campbell</h1>
-      </a>-->
+  <p><a href="https://totsteam.itch.io/thatbloomingfeeling" target="_blank">that blooming feeling</a> - a game about
+    being a drop of water</p>
 
-      <p class="textlogo twelve columns">
-        <a href="https://murrayirc.com">Murray Campbell</a>
-      </p>
-    </div>
+  <p><a href="https://murrayirc.itch.io/flock" target="_blank">flock</a> - a flock simulation meets a wallpaper
+    generator</p>
 
-    <p class="intro twelve columns">
-      <a href="https://github.com/MurrayIRC" target="_blank">github</a>
-      |
-      <a href="https://docs.google.com/document/d/1HdR_eulg6KaJyS9L2UdK2dUS48k05s9ROXXFFxM3m38/edit?usp=sharing" target="_blank">resume</a>
-    </p>
+  <p><a href="https://johngroot.itch.io/tots-life-0" target="_blank">tots' life</a> - vacuum-aliens</p>
 
+  <p><a href="https://johngroot.itch.io/tots-sumo" target="_blank">tots' sumo</a> - tots' life spinoff</p>
 
-<!-- PROJECTS
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <p><a href="https://murrayirc.itch.io/gallery" target="_blank">gallery</a> - a digital art-showcase in a calm space
+  </p>
 
-    <div id="header" class="row">
+  <p><a href="https://murrayirc.itch.io/one-two-three-four-five" target="_blank">1 2 3 4 5</a> - an autobiographical
+    game about moving</p>
 
-      <a class="contentarea four columns" href="http://chessumo.com/" target="_blank" style="background-image: url('images/chessumo.png');">Chessumo</a>
+  <p><a href="https://murrayirc.itch.io/gastropodz" target="_blank">gastropodz</a> - snail sumo</p>
 
-      <a class="contentarea four columns" href="https://totsteam.itch.io/thatbloomingfeeling" target="_blank" style="background-image: url('images/tbf.png');">That Blooming Feeling</a>
+  <p><a href="https://murrayirc.itch.io/garden" target="_blank">garden</a> - zen garden, for you</p>
 
-      <a class="contentarea four columns" href="https://murrayirc.itch.io/flock" target="_blank" style="background-image: url('images/flock.png');">FLOCK</a>
+  <p><a href="https://murrayirc.itch.io/mama" target="_blank">mama</a> - you are mama</p>
 
-    </div>
-
-    <div id="header" class="row">
-
-      <a class="contentarea four columns" href="https://johngroot.itch.io/tots-life-0" target="_blank" style="background-image: url('images/totslife.png');">Tots' Life</a>
-
-      <a class="contentarea four columns" href="https://murrayirc.itch.io/gallery" target="_blank" style="background-image: url('images/gallery.png');">Gallery</a>
-
-    </div>
-
-    <a class="smallcontentarea twelve columns" href="https://murrayirc.itch.io/" target="_blank">more games on itch.io</a>
-
-  </div>
-
-<!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <p><a href="https://chriswade.itch.io/snakes-on-a-train" target="_blank">snakes on a train</a> - snake game, made
+    during train jam</p>
 </body>
+
 </html>
