--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 
 <head>
-
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Murray Campbell</title>
+  <title>murray campbell</title>
   <meta name="description" content="">
   <meta name="author" content="Murray Campbell">
 
@@ -30,40 +29,49 @@
 </head>
 
 <body>
-  <h1><a href="https://murray.media">Murray Campbell</a></h1>
+  <h1><a href="https://murray.media">murray campbell</a></h1>
   <p><a href="https://github.com/MurrayIRC" target="_blank">github</a> ***
     <a href="https://docs.google.com/document/d/1HdR_eulg6KaJyS9L2UdK2dUS48k05s9ROXXFFxM3m38/edit?usp=sharing"
       target="_blank">resume</a>
   </p>
 
-  <h2>projects</h2>
+  <h2>personal projects</h2>
   <hr>
   <p><a href="http://chessumo.com/" target="_blank">chessumo</a> - a chess game</p>
-
-  <p><a href="https://totsteam.itch.io/thatbloomingfeeling" target="_blank">that blooming feeling</a> - a game about
-    being a drop of water</p>
-
   <p><a href="https://murrayirc.itch.io/flock" target="_blank">flock</a> - a flock simulation meets a wallpaper
     generator</p>
+  <p><a href="https://murrayirc.itch.io/one-two-three-four-five" target="_blank">1 2 3 4 5</a> - an autobiographical
+    game about moving</p>
+  <p><a href="https://murrayirc.itch.io/garden" target="_blank">garden</a> - zen garden, for you</p>
 
+  <h2>team projects</h2>
+  <hr>
+  <p><a href="https://totsteam.itch.io/thatbloomingfeeling" target="_blank">that blooming feeling</a> - a game about
+    being a drop of water</p>
   <p><a href="https://johngroot.itch.io/tots-life-0" target="_blank">tots' life</a> - vacuum-aliens</p>
-
   <p><a href="https://johngroot.itch.io/tots-sumo" target="_blank">tots' sumo</a> - tots' life spinoff</p>
-
   <p><a href="https://murrayirc.itch.io/gallery" target="_blank">gallery</a> - a digital art-showcase in a calm space
   </p>
 
-  <p><a href="https://murrayirc.itch.io/one-two-three-four-five" target="_blank">1 2 3 4 5</a> - an autobiographical
-    game about moving</p>
+  <h2>professional contributions</h2>
+  <hr>
+  <p><a href="https://apps.apple.com/ph/app/animation-throwdown-ccg/id1080816579" target="_blank">Animation
+      Throwdown</a>
+  </p>
+  <p><a href="https://apps.apple.com/ph/app/tmnt-mutant-madness/id1483843470" target="_blank">TMNT: Mutant Madness</a>
+  </p>
+  <p><a href="https://apps.apple.com/ph/app/tmnt-mutant-madness/id1483843470" target="_blank">TMNT: Mutant Madness</a>
+  </p>
 
-  <p><a href="https://murrayirc.itch.io/gastropodz" target="_blank">gastropodz</a> - snail sumo</p>
-
-  <p><a href="https://murrayirc.itch.io/garden" target="_blank">garden</a> - zen garden, for you</p>
-
-  <p><a href="https://murrayirc.itch.io/mama" target="_blank">mama</a> - you are mama</p>
-
+  <h2>game jams</h2>
+  <hr>
+  <p><a href="https://murrayirc.itch.io/gastropodz" target="_blank">gastropodz</a> - snail sumo, made for a small game
+    jam in japan with students from Trident Computer School (トライデント コンピュータ専門学校)</p>
+  <p><a href="https://murrayirc.itch.io/mama" target="_blank">mama</a> - you are mama, made for <a
+      href="https://itch.io/c/9903/mom-jam-2017">Mom Jam 2017</a></p>
   <p><a href="https://chriswade.itch.io/snakes-on-a-train" target="_blank">snakes on a train</a> - snake game, made
     during train jam</p>
+
 </body>
 
 </html>
