--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
   <p><a href="https://johngroot.itch.io/tots-sumo" target="_blank">tots' sumo</a> - tots' life spinoff</p>
   <p><a href="https://murrayirc.itch.io/gallery" target="_blank">gallery</a> - a digital art-showcase in a calm space
   </p>
+  <p><a href="https://play.google.com/store/apps/details?id=com.FoolVille_Inc.FoolVille&hl=en_US"
+      target="_blank">foolville</a> - an augmented reality game wherein one overlooks a village whilst guiding the
+    power of the sun</p>
 
   <h2>professional contributions</h2>
   <hr>
@@ -71,6 +74,13 @@
       href="https://itch.io/c/9903/mom-jam-2017">Mom Jam 2017</a></p>
   <p><a href="https://chriswade.itch.io/snakes-on-a-train" target="_blank">snakes on a train</a> - snake game, made
     during train jam</p>
+
+  <h2>other junk</h2>
+  <hr>
+  <p><a href="https://www.twitch.tv/bachyard" target="_blank">twitch</a> - occasionally i will stream random stuff
+    (reading, writing, gamedev, games, music, etc.)</p>
+
+  <p class="footer">© MURRAY LLC</p>
 
 </body>
 
