Updated information (name change and URL)

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>murray campbell</title>
+  <title>mara diana's portfolio</title>
   <meta name="description" content="">
-  <meta name="author" content="Murray Campbell">
+  <meta name="author" content="Mara Diana">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -29,20 +29,20 @@
 </head>
 
 <body>
-  <h1><a href="https://murray.media">murray campbell</a></h1>
-  <p><a href="https://github.com/MurrayIRC" target="_blank">github</a> ***
-    <a href="https://docs.google.com/document/d/1HdR_eulg6KaJyS9L2UdK2dUS48k05s9ROXXFFxM3m38/edit?usp=sharing"
+  <h1><a href="https://murray.media">mara diana</a></h1>
+  <p><a href="https://github.com/campmara" target="_blank">github</a> ***
+    <a href="https://docs.google.com/document/d/1AFNjWEGcbYyi68xVoobPErZb3wB5h01gm_06TnxuHPg/edit?usp=sharing"
       target="_blank">resume</a>
   </p>
 
   <h2>personal projects</h2>
   <hr>
   <p><a href="http://chessumo.com/" target="_blank">chessumo</a> - a chess game</p>
-  <p><a href="https://murrayirc.itch.io/flock" target="_blank">flock</a> - a flock simulation meets a wallpaper
+  <p><a href="https://0x131181.itch.io/flock" target="_blank">flock</a> - a flock simulation meets a wallpaper
     generator</p>
-  <p><a href="https://murrayirc.itch.io/one-two-three-four-five" target="_blank">1 2 3 4 5</a> - an autobiographical
-    game about moving</p>
-  <p><a href="https://murrayirc.itch.io/garden" target="_blank">garden</a> - zen garden, for you</p>
+  <p><a href="https://0x131181.itch.io/one-two-three-four-five" target="_blank">1 2 3 4 5</a> - an autobiographical game
+    about moving</p>
+  <p><a href="https://0x131181.itch.io/garden" target="_blank">garden</a> - zen garden, for you</p>
 
   <h2>team projects</h2>
   <hr>
@@ -50,11 +50,11 @@
     being a drop of water</p>
   <p><a href="https://johngroot.itch.io/tots-life-0" target="_blank">tots' life</a> - vacuum-aliens</p>
   <p><a href="https://johngroot.itch.io/tots-sumo" target="_blank">tots' sumo</a> - tots' life spinoff</p>
-  <p><a href="https://murrayirc.itch.io/gallery" target="_blank">gallery</a> - a digital art-showcase in a calm space
+  <p><a href="https://0x131181.itch.io/gallery" target="_blank">gallery</a> - a digital art-showcase in a calm space
   </p>
   <p><a href="https://play.google.com/store/apps/details?id=com.FoolVille_Inc.FoolVille&hl=en_US"
-      target="_blank">foolville</a> - an augmented reality game wherein one overlooks a village whilst guiding the
-    power of the sun</p>
+      target="_blank">foolville</a> - an augmented reality game wherein one overlooks a village whilst guiding the power
+    of the sun</p>
 
   <h2>professional contributions</h2>
   <hr>
@@ -66,19 +66,14 @@
 
   <h2>game jams</h2>
   <hr>
-  <p><a href="https://murrayirc.itch.io/gastropodz" target="_blank">gastropodz</a> - snail sumo, made for a small game
+  <p><a href="https://0x131181.itch.io/gastropodz" target="_blank">gastropodz</a> - snail sumo, made for a small game
     jam in japan with students from Trident Computer School (トライデント コンピュータ専門学校)</p>
-  <p><a href="https://murrayirc.itch.io/mama" target="_blank">mama</a> - you are mama, made for <a
+  <p><a href="https://0x131181.itch.io/mama" target="_blank">mama</a> - you are mama, made for <a
       href="https://itch.io/c/9903/mom-jam-2017">Mom Jam 2017</a></p>
   <p><a href="https://chriswade.itch.io/snakes-on-a-train" target="_blank">snakes on a train</a> - snake game, made
     during train jam</p>
 
-  <h2>other junk</h2>
-  <hr>
-  <p><a href="https://www.twitch.tv/bachyard" target="_blank">twitch</a> - occasionally i will stream random stuff
-    (reading, writing, gamedev, games, music, etc.)</p>
-
-  <p class="footer">© MURRAY LLC</p>
+  <p class="footer">© Mara Diana</p>
 
 </body>
 
