added proxi and changed section order

--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
       target="_blank">resume</a>
   </p>
 
+  <h2>professional contributions</h2>
+  <hr>
+  <p><a href="https://www.galliumstudios.com/proxi" target="_blank">Proxi</a>
+  <p><a href="https://apps.apple.com/ph/app/animation-throwdown-ccg/id1080816579" target="_blank">Animation
+      Throwdown</a>
+  </p>
+  <p><a href="https://apps.apple.com/ph/app/tmnt-mutant-madness/id1483843470" target="_blank">TMNT: Mutant Madness</a>
+  </p>
+
   <h2>personal projects</h2>
   <hr>
   <p><a href="http://chessumo.com/" target="_blank">chessumo</a> - a chess game</p>
@@ -51,14 +60,6 @@
   <p><a href="https://johngroot.itch.io/tots-life-0" target="_blank">tots' life</a> - vacuum-aliens</p>
   <p><a href="https://johngroot.itch.io/tots-sumo" target="_blank">tots' sumo</a> - tots' life spinoff</p>
   <p><a href="https://0x131181.itch.io/gallery" target="_blank">gallery</a> - a digital art-showcase in a calm space
-  </p>
-
-  <h2>professional contributions</h2>
-  <hr>
-  <p><a href="https://apps.apple.com/ph/app/animation-throwdown-ccg/id1080816579" target="_blank">Animation
-      Throwdown</a>
-  </p>
-  <p><a href="https://apps.apple.com/ph/app/tmnt-mutant-madness/id1483843470" target="_blank">TMNT: Mutant Madness</a>
   </p>
 
   <h2>game jams</h2>
