--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
 
 <body>
   <h1><a href="https://maradiana.com">mara diana</a></h1>
-  <!--
-  <p><a href="https://github.com/campmara" target="_blank">github</a> ***
+  <p><a href="https://github.com/campmara" target="_blank">github</a> 
+    <!--***
     <a href="https://docs.google.com/document/d/1AFNjWEGcbYyi68xVoobPErZb3wB5h01gm_06TnxuHPg/edit?usp=sharing"
-      target="_blank">resume</a>
+      target="_blank">resume</a>-->
   </p>
-  -->
 
   <h2>professional contributions</h2>
   <hr>
